Fixed weird overflow + div

--- a/NKProject/src/App.css
+++ b/NKProject/src/App.css
@@ -1,5 +1,5 @@
-body {
+/* body {
     height: 100vh;
     width: 100vh;
     background-color: black;
-}
+} */
