--- a/NKProject/src/index.css
+++ b/NKProject/src/index.css
@@ -1,10 +1,12 @@
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: #2a3441;
 }
 
 #root {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
+
